--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -65,6 +65,6 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         username: ${{ secrets.SSH_USERNAME }}
         script: |
-          cd /var/www/html/
+          cd /var/www/admin.dummyproject.xyz/
           git checkout -f 
           git pull
