--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -66,5 +66,5 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         script: |
           cd /var/www/admin.dummyproject.xyz/
-          git checkout -f 
-          git pull
+          ggit pull origin master
+          composer install
