--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -59,12 +59,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Deployment
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@main
       with:
         host: ${{ secrets.SSH_HOST }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         username: ${{ secrets.SSH_USERNAME }}
         script: |
           cd /var/www/admin.dummyproject.xyz/
-          git pull origin master
+          git checkout -f 
           composer install
