--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -66,5 +66,7 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         script: |
           cd /var/www/admin.dummyproject.xyz/
-          git checkout master
+          git remote update
+          git fetch
+          git checkout --track origin/master
           composer install
